# macmon

./: .gitignore  Cargo.toml  Makefile  readme.md
.github/workflows/: check.yml  release.yml
benches/: ioreport.rs  sampler.rs
crates/lib/: Cargo.toml
crates/lib/include/: macmon.h
crates/lib/src/: ffi.rs  lib.rs  metrics.rs  metrics_json.rs  sources.rs
crates/macmon/: Cargo.toml
crates/macmon/src/: app.rs  debug.rs  main.rs  serve.rs
example-grafana/: grafana-dashboard.json
src/: app.rs  debug.rs  lib.rs  main.rs  metrics.rs  serve.rs  sources.rs
