[workspace]
members = ["crates/lib", "crates/macmon"]
resolver = "2"

[workspace.package]
version = "0.7.2"
edition = "2024"
authors = ["vladkens"]
license = "MIT"
repository = "https://github.com/vladkens/macmon"
homepage = "https://github.com/vladkens/macmon"
documentation = "https://docs.rs/macmon"
readme = "readme.md"

[workspace.dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
libc = "0.2.185"
num-traits = "0.2.19"
ratatui = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
serde_json = "1.0.149"

[workspace.lints.rust]
non_camel_case_types = "allow"
unreachable_code = "allow"
unused_assignments = "allow"
unused_imports = "deny"

[workspace.lints.clippy]
needless_range_loop = "allow"
single_match = "allow"

[profile.release]
panic = "abort"
strip = false
lto = false
