[package]
name = "macmon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Apple Silicon system monitor — CPU/GPU power, temperature, RAM. No sudo. TUI, JSON pipe, Prometheus exporter."
keywords = ["macos", "apple-silicon", "monitoring", "prometheus", "tui"]
categories = ["command-line-utilities", "hardware-support", "visualization"]

[[bin]]
name = "macmon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
core-foundation.workspace = true
macmon_lib = { package = "macmon-lib", path = "../lib" }
num-traits.workspace = true
ratatui.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
